Fix: Flexwrap behavior of image thumbnails on product edit page

--- a/Deerfly_Patches/Content/Site.css
+++ b/Deerfly_Patches/Content/Site.css
@@ -449,6 +449,7 @@ textarea {
 
 #product-images {
     display: flex;
+    flex-wrap: wrap;
 }
 
 
@@ -490,8 +491,3 @@ textarea {
     margin-right: auto;
     display: block;
 }
-
-.flex {
-    flex-wrap: wrap;
-}
-
